# serde_components

./: .coverage  .coveragerc  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  codecov.yml  dev-requirements.txt  pyproject.toml
.github/: codecov.yml
.github/workflows/: test.yml  test_master.yml
serde_components/: __init__.py
serde_components/deserializers/: __init__.py  base.py  csv_deserializer.py  json_deserializer.py  toml_deserializer.py  xml_deserializer.py
serde_components/deserializers/toml/: __init__.py  toml_reader.py
serde_components/deserializers/xml/: __init__.py  tokenizer.py  xml_reader.py
serde_components/mappers/: __init__.py  base.py
serde_components/record/: __init__.py  base.py
serde_components/serializers/: __init__.py  base.py  csv_serializer.py  json_serializer.py  toml_serializer.py  xml_serializer.py
serde_components/serializers/toml/: __init__.py  toml_writer.py
serde_components/serializers/xml/: __init__.py  xml_writer.py
tests/: __init__.py  conftest.py  test_csv.py  test_file.py  test_json.py  test_toml.py  test_xml.py
tests/data/csv/: record1.csv
tests/data/json/: record1.json  record3.json
tests/data/toml/: record1.toml  record3.toml
tests/data/xml/: record1.xml  record2.xml  record3.xml
tests/test_files/: record.json  record.toml
tests/test_files/json/: record1.json
