[tool.poetry]
name = "serde-components"
version = "0.1.0"
description = ""
authors = ["Mitchell Berendhuysen <mitchellbhuysen@hotmail.com>"]
readme = "README.md"
packages = [{include = "serde_components"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
